--- a/index.html
+++ b/index.html
@@ -68,6 +68,16 @@
                 </p>
             </div>
         </section>
+
+        <section class="history-section" aria-label="history section">
+            <div class="container">
+                <h2 class="history-titel">History</h1>
+                <img src="assets/webp/History.webp" alt="photo" class="history-photo">
+                <p class="history-description" aria-label="history description">
+                    Дом в котором родился Айвазовский | The house where Aivazovsky was born 
+                </p>
+            </div>
+        </section>
     </main>
 
     <footer></footer>
