--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
             <nav class="nav" aria-label="header navigation">
                 <ul class="nav-list" aria-label="header navigation list">
                     <li>
-                        <a href="#" class="nav-link" aria-label="link to home">Home</a>
+                        <a href="#home-id" class="nav-link" aria-label="link to home">Home</a>
                     </li>
                     <li>
-                        <a href="#" class="nav-link" aria-label="link to about">About</a>
+                        <a href="#about-id" class="nav-link" aria-label="link to about">About</a>
                     </li>
                     <li>
-                        <a href="#" class="nav-link" aria-label="link to history">History</a>
+                        <a href="#history-id" class="nav-link" aria-label="link to history">History</a>
                     </li>
                     <li>
-                        <a href="#" class="nav-link" aria-label="link to portfolio">Portfolio</a>
+                        <a href="#portfolio-id" class="nav-link" aria-label="link to portfolio">Portfolio</a>
                     </li>
                     <li>
                         <a href="#" class="nav-link" aria-label="link to contacts">Contacts</a>
@@ -38,7 +38,7 @@
     </header>
 
     <main aria-label="main">
-        <section class="home" aria-label="home section">
+        <section class="home" aria-label="home section" id="home-id">
             <div class="container">
                 <h1 class="home-title" aria-label="title">Ivan Constantinovich Aivazovski</h1>
                 <p class="home-description" aria-label="description">
@@ -48,7 +48,7 @@
             </div>
         </section>
 
-        <section class="about" aria-label="about section">
+        <section class="about" aria-label="about section" id="about-id">
             <div class="container">
                 <h2 class="about-title" aria-label="about title">About</h2>
                 <h3 class="about-subtitle-ru" aria-label="about subtitle ru">
@@ -69,12 +69,30 @@
             </div>
         </section>
 
-        <section class="history-section" aria-label="history section">
+        <section class="history-section" aria-label="history section" id="history-id">
             <div class="container">
                 <h2 class="history-titel">History</h1>
                 <img src="assets/webp/History.webp" alt="photo" class="history-photo">
                 <p class="history-description" aria-label="history description">
                     Дом в котором родился Айвазовский | The house where Aivazovsky was born 
+                </p>
+            </div>
+        </section>
+
+        <section class="portfolio" aria-label="portfolio section" id="portfolio-id">
+            <div class="container">
+                <h2 class="portfolio-title">Portfolio</h2>
+                <img src="assets/webp/Portfolio_1.webp" alt="winter wagon on the way" class="portfolio-picture">
+                <p class="portfolio-description" aria-label="picture 1 description">
+                    Зимний обоз в пути, 1857 г. | Winter wagon train on the way, 1857
+                </p>
+                <img src="assets/webp/Portfolio_2.webp" alt="Rainbow" class="portfolio-picture">
+                <p class="portfolio-description" aria-label="picture 2 description">
+                    Радуга, 1873 г. | Rainbow, 1873
+                </p>
+                <img src="assets/webp/Portfolio_3.webp" alt="Gulf of Naples in the morning" class="portfolio-picture">
+                <p class="portfolio-description" aria-label="picture 3 description">
+                    Неаполитанский залив утром, 1893 г. | Gulf of Naples in the morning, 1893
                 </p>
             </div>
         </section>
